# maa-telegram-bot

./: Cargo.toml  README.md  clippy.toml
src/: bot.rs  config.rs  error.rs  main.rs  model.rs
src/bot/: append_task.rs  get_current_task.rs  mod.rs  screenshot_all.rs
