[package]
name = "maa-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
clap = { version = "4.4.18", features = ["derive"] }
dptree = "0.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }
