[package]
name = "maa-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
"pedantic" = "warn"

# from restriction group
"absolute_paths" = "warn"
"assertions_on_result_states" = "warn"
# this my be troublesome
"clone_on_ref_ptr" = "warn"
"create_dir" = "warn"
"decimal_literal_representation" = "warn"
"default_union_representation" = "warn"
"empty_drop" = "warn"
"empty_structs_with_brackets" = "warn"
"expect_used" = "warn"
"filetype_is_file" = "warn"
"if_then_some_else_none" = "warn"
"format_push_string" = "warn"
"error_impl_error" = "warn"
"impl_trait_in_params" = "warn"
"let_underscore_must_use" = "warn"
"map_err_ignore" = "warn"
"mem_forget" = "warn"
"multiple_inherent_impl" = "warn"
"mutex_atomic" = "warn"
"needless_raw_strings" = "warn"
"panic" = "warn"
"pattern_type_mismatch" = "warn"
"print_stderr" = "warn"
"print_stdout" = "warn"
"pub_without_shorthand" = "warn"
"rc_mutex" = "warn"
"rest_pat_in_fully_bound_structs" = "warn"
"semicolon_outside_block" = "warn"
"shadow_same" = "warn"
"shadow_unrelated" = "warn"
"single_char_lifetime_names" = "warn"
"str_to_string" = "warn"
"string_slice" = "warn"
"string_to_string" = "warn"
"suspicious_xor_used_as_pow" = "warn"
"todo" = "warn"
"try_err" = "warn"
"unnecessary_safety_comment" = "warn"
"unnecessary_safety_doc" = "warn"
"unnecessary_self_imports" = "warn"
"unneeded_field_pattern" = "warn"
"unwrap_used" = "warn"
"use_debug" = "warn"
"verbose_file_reads" = "warn"
"wildcard_enum_match_arm" = "warn"

"dbg_macro" = "deny"
"float_cmp_const" = "deny"
"fn_to_numeric_cast_any" = "deny"
"large_include_file" = "deny"
"lossy_float_literal" = "deny"
"missing_assert_message" = "deny"
"mixed_read_write_in_expression" = "deny"
"mod_module_files" = "deny"
"multiple_unsafe_ops_per_block" = "deny"
"panic_in_result_fn" = "deny"
"same_name_method" = "deny"
"tests_outside_test_module" = "deny"
"undocumented_unsafe_blocks" = "deny"
"unseparated_literal_suffix" = "deny"

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }
dptree = "0.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
teloxide = { version = "0.12.2", features = ["macros"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
